# libcopp

./: .clang-format  .clang_complete  .cmake-format.yaml  .gcc-flags.json  .gitattributes  .gitignore  .gitmodules  .scan-build.disable  .scan-build.enable  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  LibcoppConfig.cmake.in  README.md  README.rst  appveyor.yml  cmake_dev.bat  cmake_dev.ps1  cmake_dev.sh  codecov.yml  lgtm.yml  libcopp-config.cmake.in  schedule.txt
sample/: CMakeLists.txt  sample.custom-macro.cmake  sample.macro.cmake  sample_benchmark_coroutine.cpp  sample_benchmark_coroutine_malloc.cpp  sample_benchmark_coroutine_mem_pool.cpp  sample_benchmark_coroutine_stack_pool.cpp  sample_benchmark_future_poll.cpp  sample_benchmark_future_poll_no_trivial.cpp  sample_benchmark_std_couroutine_callable_create_generator.cpp  sample_benchmark_std_couroutine_callable_create_generator_no_trivial.cpp  sample_benchmark_std_couroutine_callable_generator.cpp  sample_benchmark_std_couroutine_callable_generator_no_trivial.cpp  sample_benchmark_std_couroutine_callable_recursive.cpp  sample_benchmark_std_couroutine_callable_reuse_generator.cpp  sample_benchmark_std_couroutine_callable_reuse_generator_no_trivial.cpp  sample_benchmark_std_couroutine_task_create_generator.cpp  sample_benchmark_std_couroutine_task_create_generator_no_trivial.cpp  sample_benchmark_std_couroutine_task_generator.cpp  sample_benchmark_std_couroutine_task_generator_no_trivial.cpp  sample_benchmark_std_couroutine_task_reuse_generator.cpp  sample_benchmark_std_couroutine_task_reuse_generator_no_trivial.cpp  sample_benchmark_task.cpp  sample_benchmark_task_malloc.cpp  sample_benchmark_task_mem_pool.cpp  sample_benchmark_task_stack_pool.cpp  sample_default_coroutine_context.cpp  sample_default_manager.cpp  sample_linux_gcc_splited_segment.cpp  sample_readme_1.cpp  sample_readme_10.cpp  sample_readme_11.cpp  sample_readme_2.cpp  sample_readme_3.cpp  sample_readme_4.cpp  sample_readme_5.cpp  sample_readme_6.cpp  sample_readme_7.cpp  sample_readme_8.cpp  sample_readme_9.cpp  (+7 more)
src/: CMakeLists.txt  libcopp.macro.cmake
src/coroutine_context/: coroutine.src.filter.cmake  coroutine_context_base.cpp  coroutine_context_safe_base.cpp  coroutine_runnable_base.cpp
src/fcontext/: fcontext.src.filter.cmake
src/fcontext/asm/: jump_arm_aapcs_elf_gas.S  jump_arm_aapcs_macho_gas.S  jump_i386_ms_pe_masm.asm  jump_i386_sysv_macho_gas.S  jump_ppc32_sysv_elf_gas.S  jump_ppc64_sysv_elf_gas.S  jump_x86_64_ms_pe_masm.asm  jump_x86_64_sysv_elf_gas.S  make_arm_aapcs_elf_gas.S  make_i386_sysv_elf_gas.S  make_i386_sysv_macho_gas.S  make_ppc32_sysv_elf_gas.S  make_sparc64_sysv_elf_gas.S  make_x86_64_sysv_elf_gas.S
src/fcontext/detect/: fcontext.detect.cmake
src/fcontext/tools/: arm.aapcs.elf.cmake  i386.ms.pe_masm.cmake  i386.sysv.elf.cmake  x86_64.ms.pe_masm.cmake  x86_64.sysv.elf.cmake
src/libcopp/: CMakeLists.txt  libcopp.lib.cmake
src/libcopp/coroutine/: coroutine.src.filter.cmake  coroutine_context.cpp  coroutine_context_base.cpp  coroutine_context_fiber.cpp  coroutine_context_safe_base.cpp  coroutine_runnable_base.cpp  std_coroutine_common.cpp
src/libcopp/fcontext/: fcontext.src.filter.cmake  update_tool.sh
src/libcopp/fcontext/asm/: jump_arm64_aapcs_elf_gas.S  jump_arm64_aapcs_macho_gas.S  jump_arm64_aapcs_pe_armasm.asm  jump_arm_aapcs_elf_gas.S  jump_arm_aapcs_macho_gas.S  jump_arm_aapcs_pe_armasm.asm  jump_i386_ms_pe_clang_gas.S  jump_i386_ms_pe_gas.asm  jump_i386_ms_pe_masm.asm  jump_i386_sysv_elf_gas.S  jump_i386_sysv_macho_gas.S  jump_loongarch64_sysv_elf_gas.S  jump_mips32_o32_elf_gas.S  jump_mips64_n64_elf_gas.S  jump_ppc32_sysv_elf_gas.S  jump_ppc32_sysv_macho_gas.S  jump_ppc32_sysv_xcoff_gas.S  jump_ppc64_sysv_elf_gas.S  jump_ppc64_sysv_macho_gas.S  jump_ppc64_sysv_xcoff_gas.S  jump_riscv64_sysv_elf_gas.S  jump_s390x_sysv_elf_gas.S  jump_sparc64_sysv_elf_gas.S  jump_sparc_sysv_elf_gas.S  jump_x86_64_ms_pe_clang_gas.S  jump_x86_64_ms_pe_gas.asm  jump_x86_64_ms_pe_masm.asm  jump_x86_64_sysv_elf_gas.S  jump_x86_64_sysv_macho_gas.S  (+57 more)
src/libcopp/stack/: stack.src.filter.cmake  stack_context.cpp
src/libcopp/utils/: uint64_id_allocator.cpp  utils.src.filter.cmake
src/libcotask/: CMakeLists.txt  libcotask.lib.cmake  task.src.filter.cmake  this_task.cpp
src/libcotask/impl/: task_action_impl.cpp  task_impl.cpp
src/stack_context/: stack.src.filter.cmake  stack_context.cpp
src/stack_context/allocator/: stack_allocator_memory.cpp  stack_allocator_posix.cpp  stack_allocator_split_segment.cpp  stack_allocator_windows.cpp
test/: CMakeLists.txt  coroutine_context_base_test.cpp  coroutine_context_safe_base_test.cpp  coroutine_context_split_segment.cpp  coroutine_manager_test.cpp  fcontext_test.cpp  test.custom-macro.cmake  test.macro.cmake
test/app/: main.cpp
test/case/: callable_promise_test.cpp  coroutine_context_base_test.cpp  coroutine_context_fiber_test.cpp  coroutine_context_private_data_test.cpp  coroutine_context_safe_base_test.cpp  coroutine_context_split_segment.cpp  coroutine_context_this_coroutine_test.cpp  coroutine_manager_test.cpp  coroutine_task_fiber_test.cpp  coroutine_task_manager_test.cpp  coroutine_task_test.cpp  couroutine_context_this_coroutine_test.cpp  fcontext_test.cpp  future_and_std_coroutine_test.cpp  future_for_std_coroutine_test.cpp  future_test.cpp  generator_promise_test.cpp  id_allocator_test.cpp  stack_pool_test.cpp  task_promise_task_manager_test.cpp  task_promise_test.cpp
test/cli/: cmd_option.h  cmd_option_bind.h  cmd_option_bind_param_list.h  cmd_option_bindt_base.h  cmd_option_bindt_cc.h  cmd_option_bindt_mf_cc.h  cmd_option_list.cpp  cmd_option_list.h  cmd_option_phoenix.h  cmd_option_string.h  cmd_option_value.cpp  cmd_option_value.h  shell_font.cpp  shell_font.h
test/common/: string_oprs.h
test/frame/: shell_font.cpp  shell_font.h  test_case_base.cpp  test_case_base.h  test_macros.h  test_manager.cpp  test_manager.h
test/std/: ref.h  tuple.h  utility.h
test/std/type_traits/: const_common.h  is_floating_point_impl.h  is_integral_impl.h  is_xxx_impl.h  remove_cv.h
(+206 files in other folders)
